--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,6 @@
 # About the CODEOWNERS file:
+
 # https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
-* @RanFeldesh
+
+- @RanFeldesh
+- @waseemrajashaik
